           upon TCP connect.
         - added $message argument to subscription related events. the contents
           comes from the <status> elements in the presence stanza.
         - made special contact for keeping track of the presences of our own
           resources. See ::IM::Roster::get_own_contact() and ::IM::Contact::is_me().
         - minor fixes in ::Ext::MUC.

0.3 Mon Jan 28 23:00:58 CET 2009
         - fixed a bug in disconnect error reporting.
         - fixed bad parameter passing of AnyEvent::XMPP::Client to
           AnyEvent::XMPP::IM::Account, also 'host' is used for overriding
           the destination host now (and not 'domain', as it was in version
           0.2).
         - half fixed RT #42194 (Domain vs. host and GSSAPI),
           passing the hostname specified by 'host' for ::Connection to
           Authen::SASL's client_new method.
         - fixed bug in ::XMPP::Client where remove_account didn't work
           as expected (and set_accounts).

0.2 Sun Dec 28 15:09:25 CET 2008
         - Using the better tested AnyEvent::Handle and
           AnyEvent::Socket for DNS resolution, TCP connect and TLS now.
         - override_host and override_port have been removed.
         - weird DNS SRV handling and comments have been removed.
         - removed blocked_write option and drain function, send_buffer_empty event
           should be used. blocking behaviour should be emulated with send_buffer_empty
           at the toplevel of the program.
         - improved message tracking api in ::IM::Account
         - added added_account/removed_account events to ::Client
         - added set_accounts() function to ::Client
         - removed unneccessary sample (devcl)
         - renamed module from Net::XMPP2 to AnyEvent::XMPP
         - minor additions to ::Ext::Pubsub.

0.14 Fri Aug  1 12:13:11 CEST 2008
         - NOTICE: This is the last release of this module under the name