@@ -10,6 +10,9 @@ Revision history for Net-XMPP2
          - made special contact for keeping track of the presences of our own
            resources. See ::IM::Roster::get_own_contact() and ::IM::Contact::is_me().
          - minor fixes in ::Ext::MUC.
+         - added 'stream_version_override' parameter to ::Connection, mostly
+           for testing purposes with ejabberd (to enforce old-jabber-style
+           authentication).
 
 0.3 Mon Jan 28 23:00:58 CET 2009
          - fixed a bug in disconnect error reporting.
